[gd_scene load_steps=5 format=3 uid="uid://cpy8kkqmvbjyw"]

[ext_resource type="Script" uid="uid://dwop5eq2pq8jq" path="res://Scripts/lever/lever.gd" id="1_o3afr"]
[ext_resource type="Texture2D" uid="uid://dn0q1jqoofjcx" path="res://Assets/Level 2/LeverLeft.png" id="2_dkjg2"]
[ext_resource type="Texture2D" uid="uid://dbkyjpfb6m5qi" path="res://Assets/Level 2/LeverRight.png" id="3_4xeg6"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dkjg2"]
size = Vector2(98, 87)

[node name="Lever" type="Node2D"]
script = ExtResource("1_o3afr")

[node name="active_sprite" type="Sprite2D" parent="."]
position = Vector2(-1, 2.00002)
scale = Vector2(0.181818, 0.181818)
texture = ExtResource("2_dkjg2")

[node name="inactive_sprite" type="Sprite2D" parent="."]
visible = false
position = Vector2(3.94881e-05, 1.57327)
scale = Vector2(0.181818, 0.181818)
texture = ExtResource("3_4xeg6")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(2, 2.5)
shape = SubResource("RectangleShape2D_dkjg2")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
